# robofun_ws

./: .gitignore  install_dependencies.sh  requirements.txt
platform/scuttle/: entrypoint.sh  hardware-preq.sh  setup.sh  (+1 more)
platform/scuttle/ROS2/src/generic_robot_driver/: package.xml  setup.cfg  setup.py
platform/scuttle/ROS2/src/generic_robot_driver/config/: cartographer.lua  nav2_eiforamr_params.yml  nav2_scuttle_devkit_params.yaml  robot_driver.yaml  ydlidar.yaml
platform/scuttle/ROS2/src/generic_robot_driver/generic_robot_driver/: robot_base_driver.py  test.py
platform/scuttle/ROS2/src/generic_robot_driver/generic_robot_driver/modules/: constants.py  robot_base.py
platform/scuttle/ROS2/src/generic_robot_driver/generic_robot_driver/modules/encoder/: __init__.py  ams.py  encoder.py
platform/scuttle/ROS2/src/generic_robot_driver/generic_robot_driver/modules/motor/: __init__.py  motor.py  pca9685.py
platform/scuttle/ROS2/src/generic_robot_driver/launch/: cartograph.launch.py  cartographer.launch.py  display.launch.py  gazebo.launch.py  generic_robot_driver.launch.py  navigation.launch.py  robot_bringup.launch.py  robot_teleop.launch.py  scuttle_full.launch.py  slam.launch.py
platform/scuttle/ROS2/src/generic_robot_driver/maps/: corridor_map.pgm  corridor_map.yaml  my_map4.pgm  my_map4.yaml
platform/scuttle/ROS2/src/generic_robot_driver/rviz/: rviz.rviz
platform/scuttle/ROS2/src/generic_robot_driver/tf_frames/: frames_2025-12-16_07.07.30.gv
platform/scuttle/ROS2/src/generic_robot_driver/urdf/: materials.xacro  scuttle.gazebo  scuttle_ydlidar.xacro
(+64 files in other folders)
